--- a/test.html
+++ b/test.html
@@ -5,8 +5,88 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first html</title>
+    <link rel="stylesheet" type="text/css" href="./fisrtstyle.css">
 </head>
 <body>
+    <h1>my fire </h1>
+    <p><em>i am testing </em>what sould i<strong>DO</strong></p>
+    <a href="http://www.google.com">google it</a>
+
+    <ul>
+        <li>fish</li>
+        <li>chicken</li>
+        <li>meat</li>
+    </ul>
+    <ol>
+        <li>demon slayer</li>
+        <li>haizeiwang</li>
+    </ol>
+    <div>
+        <table>
+            <tr>
+                <th>name</th>
+                <th>gender</th>
+                <th>hobbies</th>
+            </tr>
+            <tr>
+                <td>cheng</td>
+                <td>male</td>
+                <td>camping</td>
+            </tr>
+        </table>
+    </div>
+
+    <img src="https://files.porsche.com/filestore/image/multimedia/none/911-tus-modelimage-sideshot/model/930894f1-6214-11ea-80c8-005056bbdc38/porsche-model.png" alt="porsche pic" height="500">
+    <img src="./porsche-model.png" alt="porsche 911" width="600">
+
+    <input type="text name="firstname">
+    <input type="password" name="PIN">
+    <input type="color" name="backgroundcalor">
+    <input type="date" name="today">
+    <br>
+    <input type="radio" name="gender" value="male" id="male">
+    <label for="male">male</label>
+    <input type="radio" name="gender" value="female" id="female">
+    <label for="female">female</label>
+
+    <table>
+        <th>
+            <td>HTML</td>
+            <td>CSS</td>
+            <td>Javascript</td>
+        </th>
+        <tr>
+            <td>h</td>
+            <td>color</td>
+            <td>document</td>
+        </tr>
+        <tr>
+            <td>p</td>
+            <td>font</td>
+            <td>console</td>
+        </tr>
+    </table>
+
+    <form action="/process" method="post">
+        <input type="text" name="username" value="Rebecca">
+        <input type="submit" value="Enter Username">
+    </form>
+
+    <br>
+    <div id="block"></div>
+
+    <div id="radius">hello body</div>
+
+    <div id="rec">yoyo chekck now</div>
+
+    <div id="flag">
+        <div id="red"></div>
+        <div id="yellow"></div>
+        <div id="green"></div>
+    </div>
+
+
+
     
 </body>
 </html>
